--- a/djProject/media/css/style.css
+++ b/djProject/media/css/style.css
@@ -31,3 +31,18 @@
 	text-shadow: 5px 5px 5px #666;
 	color: #EEE;
 }
+
+/** Projects **/
+#projects-menu {
+	float: right;
+}
+
+body.projects .column {
+	margin: 10px auto;
+	width: 95%;
+	box-shadow: 0px 0px 2px gray;
+}
+
+body.projects h2 {
+	text-align: center;
+}
