--- a/djProject/templates/base.html
+++ b/djProject/templates/base.html
@@ -20,7 +20,7 @@
 	{% block head_extra %}
 	{% endblock %}
 </head>
-<body>
+<body class="yui3-skin-sam {% block body_class %}{% endblock %}">
 
 <div id="container">
 	<header>
