--- a/djProject/media/css/style.css
+++ b/djProject/media/css/style.css
@@ -1,4 +1,5 @@
 @import url("boiler.css");
+@import url("../uni_form/uni-form.css");
 
 #top-bar {
 	min-width: 960px;
@@ -30,4 +31,12 @@
 	font-size: 6em;
 	text-shadow: 5px 5px 5px #666;
 	color: #EEE;
+}
+
+#nest_signup {
+	position: absolute;
+	top: 35%;
+	width: 100%;
+	color: #EEE;
+	background-color: black;
 }
