--- a/djProject/templates/base.html
+++ b/djProject/templates/base.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssgrids/grids-min.css">
 	
-	<script src="js/libs/modernizr-2.0.min.js"></script>
+	<script src="{{ STATIC_URL }}js/libs/modernizr-2.0.min.js"></script>
 	{% block head_extra %}
 	{% endblock %}
 </head>
@@ -34,7 +34,7 @@
         {% if user.is_authenticated %}
         <a href="">settings</a> | <a href="">logout</a>
         {% else %}
- 		<a href="">login</a> | <a href="">sign up</a>
+ 		<a href="">login</a> | <a href="{% url nest_signup %}">sign up</a>
  		{% endif %}
  		</div>
         </div>
@@ -55,6 +55,8 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+{% block footer_js %}
+{% endblock %}
 <script>
 	var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']]; // Change UA-XXXXX-X to be your site's ID
 	(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
