--- a/djProject/apps/projects/templates/projects/base.html
+++ b/djProject/apps/projects/templates/projects/base.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 
+{% block title %}{% trans "Projects" %}{% endblock %}
 {% block body_class %}projects{% endblock %}
 
 {% block main %}
@@ -10,7 +11,7 @@
      <div id="projects-menu" class="column">
      	<h2>{% trans "Menu"%}</h2>
      	<ul>
-     	<li><a href="">{% trans "Create Project" %}</a></li>
+     	<li><a href="" title="">{% trans "Create Project" %}</a></li>
      	</ul>
      </div>
 </div>
@@ -31,6 +32,5 @@
      <h2>{% trans "Side"%}</h2>
      </div>
 </div>
-
 {% endblock %}
 
