--- a/djProject/templates/base.html
+++ b/djProject/templates/base.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssgrids/grids-min.css">
 	
-	<script src="js/libs/modernizr-2.0.min.js"></script>
+	<script src="{{ STATIC_URL }}js/libs/modernizr-2.0.min.js"></script>
 	{% block head_extra %}
 	{% endblock %}
 </head>
@@ -55,6 +55,12 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+<script src="http://cachedcommons.org/cache/underscore/1.1.0/javascripts/underscore-min.js"></script> 
+<script src="{{ STATIC_URL }}js/backbone-min.js"></script>
+<script>
+var API_URL = '/api/v1/';
+</script>
+<script src="{{ STATIC_URL }}js/app.js"></script>
 <script>
 	var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']]; // Change UA-XXXXX-X to be your site's ID
 	(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
