--- a/djProject/apps/projects/templates/projects/base.html
+++ b/djProject/apps/projects/templates/projects/base.html
@@ -18,7 +18,7 @@
 <div class="yui3-u-1-3">
      <div id="projects-list" class="column">
      <h2>{% trans "Projects"%}</h2>
-     	<div id="projects-list-contanier"></div>
+     	<div id="projects-container"></div>
      </div>
 </div>
 <div class="yui3-u-1-3">
@@ -36,6 +36,6 @@
 
 
 {% block footer_js %}
-<script src="{{ STATIC_URL }}js/projects.js"></script>
+<script src="{{ STATIC_URL }}js/projects.js"></script> 
 {% endblock %}
 
