--- a/djProject/templates/base.html
+++ b/djProject/templates/base.html
@@ -66,6 +66,18 @@ var API_URL = '/api/v1/';
 <script type="text/javascript" src="{{ STATIC_URL }}js/app.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/soyutils.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/templates.js"></script>
+<script src="http://js.pusherapp.com/1.8/pusher.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+// Enable pusher logging - don't include this in production
+Pusher.log = function(message) {
+    if (window.console && window.console.log) window.console.log(message);
+};
+   	
+// Flash fallback logging - don't include this in production
+{% if debug %}
+WEB_SOCKET_DEBUG = true;
+{% endif %} 
+</script> 
 {% block footer_js %}
 {% endblock %}
 <script>
