--- a/djProject/apps/projects/templates/projects/base.html
+++ b/djProject/apps/projects/templates/projects/base.html
@@ -15,16 +15,15 @@
      	</ul>
      </div>
 </div>
-<div class="yui3-u-1-3">
+<div class="yui3-u-1-4" id="projects-column">
      <div id="projects-list" class="column">
      <h2>{% trans "Projects"%}</h2>
      	<div id="projects-container">
      		
-     		{% comment %}
      		{% for member in membership %}
      			{% with member.project as project %}
      			<div >
-     				<span>{{ project.name }}</span>
+     				<span class="project-link" data-project="{{ project.id }}"><a href="#">{{ project.name }}</a></span>
      				<ul>
      					{% for sprint in project.sprint_set.all %}
 	     					<li>
@@ -36,7 +35,6 @@
      			</div>
      			{% endwith %}
      		{% endfor %}
-     		{% endcomment %}
      		
      	</div>
      </div>
@@ -49,7 +47,7 @@
 		<span>&nbsp;</span>
      </div>
 </div>
-<div class="yui3-u-1-6">
+<div class="yui3-u-1-4">
      <div id="projects-side" class="column">
      <h2>{% trans "Side"%}</h2>
      </div>
@@ -83,6 +81,10 @@ channel.bind('task_created', function(data) {
 channel.bind('task_updated', function(data) {
 	//var task = window.tasks.get(data.task.id);
 	window.tasks.fetch();
+});
+channel.bind('project_created', function(data) {
+	//fast trick
+	$("#projects-column").load("/projects/ #projects-list");
 });
 </script>
 {% endblock %}
