--- a/djProject/templates/index.html
+++ b/djProject/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
 {% block main %}
-<h1 class="logo">djProject</h1>
+<div id="logo">
+	<h1 class="logo">djProject</h1>
+</div>
 {% endblock %}
