--- a/djProject/media/css/style.css
+++ b/djProject/media/css/style.css
@@ -1,5 +1,8 @@
+@import url("http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css");
+@import url("http://yui.yahooapis.com/3.3.0/build/cssgrids/grids-min.css");
 @import url("boiler.css");
 @import url("../uni_form/uni-form.css");
+@import url("colorbox.css");
 
 
 /* Common Classes */
