--- a/djProject/apps/projects/templates/projects/project_new.html
+++ b/djProject/apps/projects/templates/projects/project_new.html
@@ -1,8 +1,6 @@
-{% extends "base.html" %}
+<html>
 
-
-{% block main %}
-
+<body>
 <form action="." method="post">
 	{% csrf_token %}
 
@@ -11,5 +9,5 @@
 	<input type="submit"/>
 
 </form>
-
-{% endblock %}
+</body>
+</html>
