--- a/djProject/apps/nest/templates/nest/settings.html
+++ b/djProject/apps/nest/templates/nest/settings.html
@@ -12,9 +12,13 @@
 <form id="nest_user_profile" action="{% url nest_user_profile %}" method="POST" class="uniForm">
     {{ form|as_uni_form }}
     {% csrf_token %}
+    <div class="ctrlHolder ">
     <center>
-    <input type="submit" name="submit" value="Confirm changes!" class="submit submitButton" id="submit-id-submit">
+    <button type="submit" name="submit" class="awesome large">Confirm changes!</button>
     </center>
+    </div>
+
+    
 </form>
 {% endblock %}
 
