--- a/djProject/apps/nest/templates/nest/signup.html
+++ b/djProject/apps/nest/templates/nest/signup.html
@@ -12,7 +12,14 @@
 <form id="nest_signup" action="{% url nest_signup %}" method="POST" class="uniForm">
 	{{ form|as_uni_form }}
 	{% csrf_token %}
-	<input type="submit" name="submit" value="Submit" class="submit submitButton" id="submit-id-submit">
+	
+    <div class="ctrlHolder ">
+    <center>
+    <button type="submit" name="submit" class="awesome large">Sign up</button>
+    </center>
+    </div>
+
+	
 </form>
 {% endblock %}
 
