--- a/djProject/apps/projects/templates/projects/project_new.html
+++ b/djProject/apps/projects/templates/projects/project_new.html
@@ -1,15 +1,30 @@
 {% extends "base.html" %}
 
+{% load uni_form_tags %}
+
+{% block head_extra %}
+<link rel="stylesheet" href="{{ STATIC_URL }}uni_form/uni-form.css" type="text/css" />
+<link rel="stylesheet" href="{{ STATIC_URL }}uni_form/default.uni-form.css" type="text/css" />
+<!-- note that there's also blue.uni-form.css and dark.uni-form.css available if you want to try changing defaults up -->
+{% endblock %}
 
 {% block main %}
 
-<form action="." method="post">
+<form action="." method="post" class="uniForm" id="simple_form">
 	{% csrf_token %}
 
-	{{ form.as_p }}
+	{{ form|as_uni_form  }}
 	
-	<input type="submit"/>
+    <div class="ctrlHolder ">
+    <center>
+    <button type="submit" name="submit" class="awesome large">Save</button>
+    </center>
+    </div>
 
 </form>
 
+{% endblock %}
+
+{% block footer_js %}
+<script src="{{ STATIC_URL }}uni_form/uni-form.jquery.js" type="text/javascript"></script>
 {% endblock %}
