--- a/djProject/apps/projects/templates/projects/base.html
+++ b/djProject/apps/projects/templates/projects/base.html
@@ -11,11 +11,11 @@
      <div id="projects-menu" class="column">
      	<h2>{% trans "Menu"%}</h2>
      	<ul>
-     	<li><a id="project-create" class="cboxElement" href="{% url projects_project_new %}" title="">{% trans "Create Project" %}</a></li>
+     	<li><a id="project-create" class="cboxElement link_menu" href="{% url projects_project_new %}" title="">{% trans "Create Project" %}</a></li>
      	</ul>
      </div>
 </div>
-<div class="yui3-u-1-4" id="projects-column">
+<div class="yui3-u-1-6" id="projects-column">
      <div id="projects-list" class="column">
      <h2>{% trans "Projects"%}</h2>
      	<div id="projects-container">
@@ -28,7 +28,7 @@
      	
      </div>
 </div>
-<div class="yui3-u-1-4">
+<div class="yui3-u-1-3">
      <div id="projects-side" class="column">
      <h2>{% trans "Side"%}</h2>
      </div>
