--- a/djProject/media/css/style.css
+++ b/djProject/media/css/style.css
@@ -226,3 +226,16 @@ li span.task div {
 	-o-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
 	box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
 }
+
+div.tc .edit {
+	display: none;
+}
+
+div.tc.editing .edit {
+	display: block;
+}
+
+div.tc.editing .content {
+	display: none;
+}
+
