--- a/djProject/media/css/style.css
+++ b/djProject/media/css/style.css
@@ -182,6 +182,7 @@ a, a:visited{
 
 body.projects h2 {
 	text-align: center;
+	text-shadow: 1px 0 5px #EFEFEF;
 }
 
 #projects-tasks-header div {
@@ -251,5 +252,9 @@ a:hover.link_menu, #projects-list a:hover{
 }
 
 #projects-list a{
+	display: block;
+}
+
+.task{
 	display: block;
 }
