--- a/djProject/apps/projects/templates/projects/base.html
+++ b/djProject/apps/projects/templates/projects/base.html
@@ -7,31 +7,23 @@
 
 {% block main %}
 
-<div class="yui3-u-1-6">
-     <div id="projects-menu" class="column">
-     	<h2>{% trans "Menu"%}</h2>
-     	<ul>
-     	<li><a id="project-create" class="cboxElement link_menu" href="{% url projects_project_new %}" title="">{% trans "Create Project" %}</a></li>
-     	</ul>
-     </div>
-</div>
 <div class="yui3-u-1-6" id="projects-column">
-     <div id="projects-list" class="column">
-     <h2>{% trans "Projects"%}</h2>
-     	<div id="projects-container">
-     	</div>
-     </div>
+	<div id="projects-list" class="column">
+		<h2>{% trans "Projects"%}</h2>
+	  	<ul>
+	     	<li><a id="project-create" class="cboxElement link_create" href="{% url projects_project_new %}" title="">{% trans "Create Project" %}</a></li>
+     	</ul>
+   		<div id="projects-container"></div>
+	</div>
+</div>
+<div class="yui3-u-1-2">
+	<div id="projects-tasks" class="column">
+	</div>
 </div>
 <div class="yui3-u-1-3">
-     <div id="projects-tasks" class="column">
-     
-     	
-     </div>
-</div>
-<div class="yui3-u-1-3">
-     <div id="projects-side" class="column">
-     <h2>{% trans "Side"%}</h2>
-     </div>
+	<div id="projects-side" class="column">
+		<h2>{% trans "Side"%}</h2>
+	</div>
 </div>
 {% endblock %}
 
