--- a/djProject/apps/projects/templates/projects/base.html
+++ b/djProject/apps/projects/templates/projects/base.html
@@ -14,6 +14,9 @@
 	     	<li><a id="project-create" class="cboxElement link_create" href="{% url projects_project_new %}" title="">{% trans "Create Project" %}</a></li>
      	</ul>
    		<div id="projects-container"></div>
+   		<p>
+   		djProject is a real-time app, test it on more than one browser or with friends.
+   		</p>
 	</div>
 </div>
 <div class="yui3-u-1-2">
